Opened 16 years ago
Closed 16 years ago
#1688 closed bug (fixed)
/boot/beos/etc/hosts does not exist in default build
Reported by: | mjw | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
After building a Haiku QEMU image, /boot/beos/etc/hosts does not exist. This is not a huge problem, but it does prevent localhost being resolved correctly.
I think that a simple host file containing an entry for localhost should be created when the Haiku is built.
Change History (1)
comment:1 by , 16 years ago
Component: | - General → - Network & Internet |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev23218. libnetwork.so now creates a "localhost" entry internally if the /etc/hosts file is missing.