If there is no /etc/hosts file, we now add a "localhost 127.0.0.1" definition internally. This fixes #1688.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23218 a95241bf-73f2-0310-859d-f6bbb57e9c96